# attic

./: Cargo.nix  Cargo.toml  ci-installer.nix  crane.nix  default.nix  flake-compat.nix  flake.nix  package.nix  shell.nix
attic/: Cargo.toml
attic/src/nix_store/: mod.rs
attic/src/nix_store/tests/drv/: no-deps.nix  with-deps.nix
book/: colorized-help.nix  default.nix
client/: Cargo.toml
client/src/: config.rs  lib.rs  main.rs
client/src/api/: mod.rs
client/src/command/: login.rs
flake/: nix-versions.nix  overlays.nix  packages.nix
integration-tests/: default.nix  nixpkgs.nix
integration-tests/basic/: default.nix
nixos/: atticd.nix
queue/: Cargo.toml
queue/src/: main.rs
server/: Cargo.toml
server/src/: config-template.toml  config.rs  gc.rs  lib.rs
server/src/api/v1/: upload_path.rs
token/: Cargo.toml
