[package]
name = "attic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.5", optional = true }
base64 = "0.21.3"
bytes = "1.5.0"
displaydoc = "0.2.4"
digest = "0.10.7"
ed25519-compact = "2.0.4"
futures = "0.3.28"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
nix-base32 = { git = "https://github.com/zhaofengli/nix-base32.git", branch="decoder" }
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
serde_with = "3.3.0"
sha2 = "0.10.7"
tempfile = "3.8.0"
wildmatch = "2.1.1"
xdg = "2.5.2"

# Native libnixstore bindings.
cxx = { version = "1.0.107", optional = true }

[dependencies.tokio]
version = "1.32.0"
optional = true
features = [
	"fs",
	"io-util",
	"process",
	"sync",
]

[dev-dependencies]
serde_json = "1.0.105"
tokio-test = "0.4.3"

[build-dependencies]
cxx-build = { version = "1.0.107", optional = true }
pkg-config = "0.3.27"
tempfile = "3.8.0"

[features]
default = [ "nix_store", "tokio" ]

# Native libnixstore bindings.
#
# When disabled, the native Rust portions of nix_store can still be used.
nix_store = [ "dep:cxx", "dep:cxx-build" ]

# Tokio.
#
# When disabled, any part depending on tokio is unavailable.
tokio = [ "dep:tokio", "dep:async-stream" ]
