[package]
name = "attic-client"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "attic"
path = "src/main.rs"

[dependencies]
attic = { path = "../attic" }

anyhow = "1.0.75"
async-channel = "1.9.0"
async-stream = "0.3.5"
bytes = "1.5.0"
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.1"
const_format = "0.2.31"
dialoguer = "0.10.4"
displaydoc = "0.2.4"
enum-as-inner = "0.6.0"
futures = "0.3.28"
humantime = "2.1.0"
indicatif = "0.17.6"
lazy_static = "1.4.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
pin-project = "1.1.3"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
xdg = "2.5.2"

[dependencies.tokio]
version = "1.32.0"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]

[dependencies.async-compression]
version = "0.4.2"
features = [
	"futures-io",
	"xz",
	"zstd",
	"brotli",
	"deflate",
	"gzip"
]
