[package]
name = "attic-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
attic = { version = "0.1.0", path = "../attic" }
attic-client = { version = "0.1.0", path = "../client" }
bincode = "1.3.3"
futures = "0.3.29"
indicatif = "0.17.7"
log = "0.4.20"
nix = { version = "0.27.1", features = ["fs"] }
num_cpus = "1.16.0"
serde = { version = "1.0.193", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.35.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
] }
tracing-subscriber = "0.3.18"
