[package]
name = "attic-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
app-queue = { git = "https://github.com/DarkKirb/app-queue", version = "0.1.0" }
async-trait = "0.1.80"
attic = { version = "0.1.0", path = "../attic" }
attic-client = { version = "0.1.0", path = "../client" }
futures = "0.3.29"
indicatif = "0.17.8"
log = "0.4.21"
nix = { version = "0.27.1", features = ["fs"] }
once_cell = "1.19.0"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
] }
tracing-subscriber = "0.3.18"
typetag = "0.2.16"
