[package]
name = "attic-server"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "attic_server"
path = "src/lib.rs"

[[bin]]
name = "atticd"
path = "src/main.rs"
doc = false

[[bin]]
name = "atticadm"
path = "src/adm/main.rs"
doc = false

[dependencies]
attic = { path = "../attic", default-features = false, features = [ "tokio" ] }
attic-token = { path = "../token" }

anyhow = "1.0.75"
async-stream = "0.3.5"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
axum = "0.6.20"
axum-macros = "0.3.8"
base64 = "0.21.3"
bytes = "1.5.0"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive"] }
derivative = "2.2.0"
digest = "0.10.7"
displaydoc = "0.2.4"
enum-as-inner = "0.6.0"
fastcdc = "3.1.0"
futures = "0.3.28"
hex = "0.4.3"
humantime = "2.1.0"
humantime-serde = "1.1.1"
itoa = "1.0.9"
maybe-owned = "0.3.4"
pin-project = "1.1.3"
rand = "0.8.5"
regex = "1.9.5"
ryu = "1.0.15"
sha2 = { version = "0.10.7", features = ["asm"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio-util = { version = "0.7.8", features = [ "io" ] }
toml = "0.7.7"
tower-http = { version = "0.4.4", features = [ "catch-panic", "trace" ] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [ "json" ] }
uuid = { version = "1.4.1", features = ["v4"] }
console-subscriber = "0.1.10"
xdg = "2.5.2"

[dependencies.async-compression]
version = "0.4.2"
features = [
	"tokio",
	"xz",
	"zstd",
	"brotli",
	"deflate",
	"gzip"
]

[dependencies.sea-orm]
version = "0.12.2"
features = [
	"runtime-tokio-rustls",
	"macros",
	"sqlx-postgres",
	"sqlx-sqlite",
	"debug-print",
]

[dependencies.sea-orm-migration]
version = "0.12.2"

[dependencies.tokio]
version = "1.32.0"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]

[dev-dependencies]
tokio-test = "0.4.3"
