[package]
name = "attic-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attic = { path = "../attic", default-features = false }

base64 = "0.21.3"
chrono = "0.4.30"
displaydoc = "0.2.4"
jwt-simple = "0.11.6"
lazy_static = "1.4.0"
regex = "1.9.5"
serde = "1.0.188"
serde_with = "3.3.0"
tracing = "0.1.37"
